[gd_scene load_steps=6 format=3 uid="uid://dkov1g224df16"]

[ext_resource type="Script" path="res://nmi_bullet.gd" id="1_mfruk"]
[ext_resource type="Texture2D" uid="uid://d2bhcn85otma3" path="res://assets/bullets/nmi_01.png" id="2_26nhp"]

[sub_resource type="Animation" id="Animation_4f7kd"]
resource_name = "default"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0912948, 0.18259, 0.273885),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wj88h"]
_data = {
"default": SubResource("Animation_4f7kd")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_i6hpn"]
radius = 2.01556

[node name="nmiBullet" type="Area2D"]
scale = Vector2(4, 4)
collision_layer = 32
collision_mask = 2
script = ExtResource("1_mfruk")
bulletSpeed = 200

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_26nhp")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wj88h")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_i6hpn")

[node name="keepAlive" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="keepAlive" to="." method="_on_keep_alive_timeout"]
